force-app/main/default/objects/Apttus__WizardInputControl__c/fields/Apttus__ContextObject__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ContextObject__c</fullName>
    <description>Business object context, used to filter and align inputs within steps and wizard designs.</description>
    <inlineHelpText>Business object context, used to filter and align inputs within steps and wizard designs.</inlineHelpText>
    <label>Context Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>