force-app/main/default/objects/Apttus__WizardInputControl__c/fields/Apttus__DefaultResponse__c.field-meta.xml
<CustomField>
    <fullName>Apttus__DefaultResponse__c</fullName>
    <description>Place a desired default response value here or leave blank</description>
    <inlineHelpText>Place a desired default response value here or leave blank</inlineHelpText>
    <label>Default Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>