force-app/main/default/objects/Apttus__WizardInputControl__c/fields/Apttus__FieldName__c.field-meta.xml
<CustomField>
    <fullName>Apttus__FieldName__c</fullName>
    <description>The Name of the salesforce object field the question applies to</description>
    <inlineHelpText>The Name of the salesforce object field the question applies to</inlineHelpText>
    <label>Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>