force-app/main/default/objects/Apttus__WizardInputControl__c/fields/Apttus__GhostResponse__c.field-meta.xml
<CustomField>
    <fullName>Apttus__GhostResponse__c</fullName>
    <description>Place a desired runtime information statement here or leave blank.</description>
    <inlineHelpText>Place a desired runtime information statement here or leave blank.</inlineHelpText>
    <label>Ghost Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>