force-app/main/default/objects/Apttus__WizardInputControl__c/fields/Apttus__HorizontalSequence__c.field-meta.xml
<CustomField>
    <fullName>Apttus__HorizontalSequence__c</fullName>
    <description>Sequence of inputs in a tabular input group from left to right</description>
    <inlineHelpText>Sequence of inputs in a tabular input group from left to right</inlineHelpText>
    <label>Horizontal Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>