force-app/main/default/objects/Apttus__WizardInputControl__c/fields/Apttus__InterfaceDefinition__c.field-meta.xml
<CustomField>
    <fullName>Apttus__InterfaceDefinition__c</fullName>
    <description>The definition of the data type entered in by the designer.</description>
    <inlineHelpText>The definition of the data type entered in by the designer.</inlineHelpText>
    <label>Interface Definition</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Apttus__ResponseDataType__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Text Entry</fullName>
            </value>
            <value>
                <fullName>Picklist Dropdown</fullName>
            </value>
            <value>
                <fullName>Picklist Radio Button</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
            <value>
                <fullName>Currency &lt;Type, Chars, Dec&gt;</fullName>
            </value>
            <value>
                <fullName>Number &lt;Chars, Dec&gt;</fullName>
            </value>
            <value>
                <fullName>Date &lt;Format&gt;</fullName>
            </value>
            <value>
                <fullName>Percent &lt;Dec&gt;</fullName>
            </value>
            <value>
                <fullName>Expression Formula</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>