force-app/main/default/objects/Apttus__WizardInputControl__c/fields/Apttus__Label__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Label__c</fullName>
    <description>The label for the input control.</description>
    <inlineHelpText>The label for the input control.</inlineHelpText>
    <label>Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>