force-app/main/default/objects/Apttus__WizardInputControl__c/fields/Apttus__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ObjectName__c</fullName>
    <description>The name of the object that qualifies the field the question resolves</description>
    <inlineHelpText>The name of the object that qualifies the field the question resolves</inlineHelpText>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>