force-app/main/default/objects/Apttus__WizardInputControl__c/fields/Apttus__Question__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Question__c</fullName>
    <description>The question or instruction statement that is used to direct the end user when completing the wizard after setup.  Defaults to Input Label</description>
    <inlineHelpText>The question or instruction statement that is used to direct the end user when completing the wizard after setup.  Defaults to Input Label</inlineHelpText>
    <label>Question/Instruction</label>
    <length>255</length>
    <type>Text</type>
</CustomField>