force-app/main/default/objects/Apttus__WizardInputControl__c/fields/Apttus__ReadOnly__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ReadOnly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Specifies if an input control value can be edited by the runtime user</description>
    <inlineHelpText>Specifies if an input control value can be edited by the runtime user</inlineHelpText>
    <label>Read Only</label>
    <type>Checkbox</type>
</CustomField>