force-app/main/default/objects/Apttus__WizardInputControl__c/fields/Apttus__Repeatable__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Repeatable__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates this is a repeatable question.</description>
    <inlineHelpText>Indicates this is a repeatable question.</inlineHelpText>
    <label>Repeatable</label>
    <type>Checkbox</type>
</CustomField>