force-app/main/default/objects/Apttus__WizardInputControl__c/fields/Apttus__Required__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Required__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates that an input value is required for the end user to continue the wizard</description>
    <inlineHelpText>Indicates that an input value is required for the end user to continue the wizard</inlineHelpText>
    <label>Required</label>
    <type>Checkbox</type>
</CustomField>