force-app/main/default/objects/Apttus__WizardInputControl__c/fields/Apttus__Response__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Response__c</fullName>
    <description>Comma separated list of values for making determinations on.</description>
    <inlineHelpText>Comma separated list of values for making determinations on.</inlineHelpText>
    <label>Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>