force-app/main/default/objects/Apttus__WizardInputControl__c/fields/Apttus__ResponseDataType__c.field-meta.xml
<CustomField>
    <fullName>Apttus__ResponseDataType__c</fullName>
    <description>The data type of the response by the end user.</description>
    <inlineHelpText>The data type of the response by the end user.</inlineHelpText>
    <label>Response Data Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Text</fullName>
            </value>
            <value>
                <fullName>List</fullName>
            </value>
            <value>
                <fullName>Currency</fullName>
            </value>
            <value>
                <fullName>Number</fullName>
            </value>
            <value>
                <fullName>Date</fullName>
            </value>
            <value>
                <fullName>Percent</fullName>
            </value>
            <value>
                <fullName>Concatenation</fullName>
            </value>
            <value>
                <fullName>Checkbox</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>