force-app/main/default/objects/Apttus__WizardInputControl__c/fields/Apttus__Subcategory__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Subcategory__c</fullName>
    <description>Dependent on the category field, whose list values shall allow users to search, find, and select Input Controls</description>
    <inlineHelpText>Dependent on the category field, whose list values shall allow users to search, find, and select Input Controls</inlineHelpText>
    <label>Subcategory</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Apttus__Category__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
                <default>true</default>
                <label>Default</label>
            </value>
            <value>
                <fullName>Sub-Category 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>