force-app/main/default/objects/Apttus__WizardInputControl__c/fields/Apttus__Transient__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Transient__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Input added to a Step is in Transient state until the Step is saved.</description>
    <inlineHelpText>Input added to a Step is in Transient state until the Step is saved.</inlineHelpText>
    <label>Transient</label>
    <type>Checkbox</type>
</CustomField>