force-app/main/default/objects/Apttus__WizardInputControl__c/fields/Apttus__Validation2__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Validation2__c</fullName>
    <description>List of values to be displayed during runtime.</description>
    <inlineHelpText>List of values to be displayed during runtime.</inlineHelpText>
    <label>Validation Input</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>