force-app/main/default/objects/Apttus__WizardInputControl__c/fields/Apttus__Version__c.field-meta.xml
<CustomField>
    <fullName>Apttus__Version__c</fullName>
    <description>Version number (counter) of input control design. This identifies the input control uniquely in the chronology of creation.</description>
    <displayFormat>{0000000}.{000}</displayFormat>
    <inlineHelpText>Version number (counter) of input control design. This identifies the input control uniquely in the chronology of creation.</inlineHelpText>
    <label>Version</label>
    <type>AutoNumber</type>
</CustomField>