force-app/main/default/objects/Apttus__WizardInputControl__c/fields/Apttus__VerticalSequence__c.field-meta.xml
<CustomField>
    <fullName>Apttus__VerticalSequence__c</fullName>
    <description>Sequence of input in an input group rendered from top to bottom</description>
    <inlineHelpText>Sequence of input in an input group rendered from top to bottom</inlineHelpText>
    <label>Vertical Sequence</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>