force-app/main/default/objects/Apttus__WizardInputControl__c/fields/Apttus__WizardInputGroupId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__WizardInputGroupId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the input group that this input control belongs to</description>
    <inlineHelpText>Lookup to the input group that this input control belongs to</inlineHelpText>
    <label>Wizard Input Group</label>
    <referenceTo>Apttus__WizardInputGroup__c</referenceTo>
    <relationshipName>Wizard_Input_Controls</relationshipName>
    <type>Lookup</type>
</CustomField>