force-app/main/default/objects/Apttus__WizardInputControl__c/fields/Apttus__WizardRulesetId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__WizardRulesetId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to ruleset for input expression</description>
    <inlineHelpText>Lookup to ruleset for input expression</inlineHelpText>
    <label>Wizard Ruleset</label>
    <referenceTo>Apttus__WizardRuleset__c</referenceTo>
    <relationshipName>Wizard_Input_Controls1</relationshipName>
    <type>Lookup</type>
</CustomField>