force-app/main/default/objects/Apttus__WizardInputControl__c/fields/Apttus__WizardStepId__c.field-meta.xml
<CustomField>
    <fullName>Apttus__WizardStepId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the step this input control belongs to</description>
    <inlineHelpText>Lookup to the step this input control belongs to</inlineHelpText>
    <label>Wizard Step</label>
    <referenceTo>Apttus__WizardStep__c</referenceTo>
    <relationshipName>Wizard_Input_Controls</relationshipName>
    <type>Lookup</type>
</CustomField>