force-app/main/default/objects/Apttus__WizardInputControl__c/listViews/Apttus__All.listView-meta.xml
<ListView>
    <fullName>Apttus__All</fullName>
    <columns>NAME</columns>
    <columns>Apttus__ObjectName__c</columns>
    <columns>Apttus__FieldName__c</columns>
    <columns>Apttus__Active__c</columns>
    <columns>Apttus__Required__c</columns>
    <columns>Apttus__Sequence__c</columns>
    <columns>Apttus__ContextObject__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>